"Track selected markers", does not stop at end of video #39545

Closed
opened 2014-04-01 13:14:33 +02:00 by Alexander N. · 6 comments
Member

System Information
Windows 8.1 x64 & ubuntu 13.x x64 linux

Blender Version
Broken: (official 2.70 release ... 2.70 build 62dc18c717)

Short description of error
the tracker does not stop tracking, when the end of video is reached earlier than the end of time-line (video is shorter than time-line)

Exact steps for others to reproduce the error

  1. download the video from http://www.blenderguru.com/videos/introduction-to-camera-tracking/
  2. copy attached "Camera.blend" file to the same location where "Source Video.mp4" is.
  3. open that blend file
  4. press [ctrl]+T, to Track selected markers.
    all markers will be tracked (frame 1 .. 220), but at end of video the tracker does not stop. the active markers "drops down like rain with wind from the side" until they reach the border or the end of time-line is reached

tracker-does-not-stopp.png

Camera.blend

**System Information** Windows 8.1 x64 & ubuntu 13.x x64 linux **Blender Version** Broken: (official 2.70 release ... 2.70 build 62dc18c717ea8c47c87e825b94a568486f93c452) **Short description of error** the tracker does not stop tracking, when the end of video is reached earlier than the end of time-line (video is shorter than time-line) **Exact steps for others to reproduce the error** 1. download the video from http://www.blenderguru.com/videos/introduction-to-camera-tracking/ 2. copy attached "Camera.blend" file to the same location where "Source Video.mp4" is. 3. open that blend file 4. press [ctrl]+T, to Track selected markers. all markers will be tracked (frame 1 .. 220), but at end of video the tracker does not stop. the active markers "drops down like rain with wind from the side" until they reach the border or the end of time-line is reached ![tracker-does-not-stopp.png](https://archive.blender.org/developer/F83656/tracker-does-not-stopp.png) [Camera.blend](https://archive.blender.org/developer/F83660/Camera.blend)
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @beta-tester

Added subscriber: @beta-tester
Sergey Sharybin self-assigned this 2014-04-01 15:06:13 +02:00

This issue was referenced by blender/blender-addons-contrib@eed3974d11

This issue was referenced by blender/blender-addons-contrib@eed3974d11af6072174a43f6b103c9b64be054e2

This issue was referenced by eed3974d11

This issue was referenced by eed3974d11af6072174a43f6b103c9b64be054e2

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit eed3974d11.

Closed by commit eed3974d11.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#39545
No description provided.